--- a/tutorial.tex
+++ b/tutorial.tex
@@ -218,8 +218,8 @@ initUtility.MakeDataset(targetDataset, dataset);
 You can also prepare data validation folds (Leave-one-out, K-fold, custom) or apply functions individually on each image. 
 
 \item For more information check \\
--\textbf{Tutorial\_ReadDataset.m}\\
--\textbf{Tutorial\_ProcessHSI.m}
+-\url{setup/demos/Tutorial\_ReadDataset.m}\\
+-\url{setup/demos/Tutorial\_ProcessHSI.m}
 \end{itemize}
 
 \end{enumerate}
