--- a/tutorial.tex
+++ b/tutorial.tex
@@ -224,11 +224,11 @@ You can also prepare data validation folds (Leave-one-out, K-fold, custom) or ap
 
 \end{enumerate}
 
-\section{medHSIpy: for python}
+%\section{medHSIpy: for python}
 
 %\pagebreak
 %\nocite{*}
-\bibliographystyle{apalike}%{ieeetr}
-\bibliography{references}
+%\bibliographystyle{apalike}%{ieeetr}
+%\bibliography{references}
 
 \end{document}
