--- a/tutorial.tex
+++ b/tutorial.tex
@@ -222,8 +222,8 @@ initUtility.MakeDataset(targetDataset, dataset);
 You can also prepare data validation folds (Leave-one-out, K-fold, custom) or apply functions individually on each image. 
 
 \item For more information check \\
--\url{setup/demos/Tutorial\_ReadDataset.m}\\
--\url{setup/demos/Tutorial\_ProcessHSI.m}
+-\url{medHSI/medHSImat/src/scripts/Tutorial\_ReadDataset.m}\\
+-\url{setup/medHSImat/src/scripts/Tutorial\_ProcessHSI.m}
 
 \end{enumerate}
 
